gobotany/static/css/styles.css
/* ... */
/* Page footer */

footer {
    height: 124px;
}
footer p {
	margin: 0 0 10px 0;
	font-size: 9px;	
}
footer div.three-col {
	width: 305px;
	height: auto;
	padding: 18px 0;
	margin: 0 20px 0 0;
	background: none;	
}
footer div.three-col.last {
	padding: 18px 0;	
}
footer a {
	color: #508e31;	
}

footer h6 {
	font-family: Verdana, Geneva, sans-serif;
	font-size: 11px;
}
footer .nsf-logo {
	float: left;
	margin: 0 10px 0 0;	
}


/* Global classes */

.left {
    float: left;
}

.right {
    float: right;
}

.hidden {
    display: none;
}

.clearit {
    clear: both;
    float: none !important;
    width: auto !important;
    height: auto !important;
    border: none !important;
    margin: 0 !important;
    padding: 0 !important;
}
.shadow {
	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);	
}

/* Page structure for top level pages
 * (Non-app pages: Home, About, FAQ, etc.) */

body.top-level {
	background: url(/static/images/layout/body-home.jpg) repeat-x left top #f3f3c3;	
}
.top-level header {
	height: 146px;	
}
.top-level header h1 {
	width: 414px;
	margin: 0 0 0 67px;	
}
.top-level header h1 a {
	width: 595px;
	height: 107px;
	background: url(/static/images/branding/logo-toplevel.png) no-repeat transparent;
}

.top-level header h2 a {
	width: 160px;
	height: 88px;
	background: url(/static/images/branding/newfs-logo-toplevel.png) no-repeat transparent;	
}
.top-level nav {
	padding: 0 0 0 19px;
	background: url(/static/images/layout/nav-toplevel.png) no-repeat; 	
}
.top-level nav li.home {
	margin: 0 63px 0 0;	
}

/* Home page styles */

body#home {
	background: url(/static/images/layout/body-home.jpg) repeat-x left top #f3f3c3;	
}

body#home #top-wrapper {
	background: url(/static/images/layout/content-home-bg.jpg) center 72px no-repeat transparent;	
}
#banner {
    margin: 10px 0 0;
    position: absolute;
}
#banner > img {
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
    display: none;
    height: 345px;
    left: 0;
    position: absolute;
    top: 0;
    width: 960px;
}
#banner img:first-child {
    display: block;
}
#overlay {
    background: rgba(255, 255, 255, 0.8);
    height: 318px;
    padding: 15px 30px 0;
    position: absolute;
    left: 646px;
    text-align: center;
    top: 6px;
    width: 248px;
    z-index: 100;
}

#banner h2 {
	color: #519136;	
    font-size: 38px;
    line-height: normal;
	margin: 0 0 15px 0;
}
#banner p {
	margin: 12px 0 0 0;
    text-align: left;
	text-shadow: 0px 1px 1px #fff;	
}
#banner a#cta {
	display: block;
	height: 41px;
	margin: 21px 2px 0;
	background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent;	
	text-indent: -9000px;
}
#banner a#cta:hover {
	background-position: 0 -41px;	
}
#banner a#cta:active {
	background-position: 0 -82px;		
}
div.three-col {
	background: url(/static/images/layout/dot.png) right top repeat-y;
	float: left;
	height: 230px;
	margin: 354px 23px 0 0;
	padding: 8px 23px 0 0;
	width: 289px;
}
div.three-col.last {
  	background: 0;	
	margin-right: 0;
	padding: 8px 0 0 0;
}
div.three-col.last a.learn-more {
	margin: 33px 0 0 0;
}

div.three-col h5 {
	margin: 0 0 3px 0;
	font-style: italic;	
	color: #807121;
}
div.three-col a.learn-more {
	margin: 13px 0 0 0;	
}
a.learn-more {
	display: block;
	width: 111px;
	height: 32px;
	background: url(/static/images/layout/learn-more-btn.png) 0 0 no-repeat;
	text-indent: -9000px;	
}
a.learn-more:hover {
	background-position: 0 -32px;	
}
a.learn-more:active {
	background-position: 0 -64px;	
}
a.subscribe {
    cursor: pointer;
    display: block;
    width: 87px;
    height: 16px;
    background: url(/static/images/layout/subscribe.png) 0 0 no-repeat;
    text-indent: -9000px;
}
a.subscribe:hover {
    background-position: 0 -16px;
}
a.subscribe:active {
    background-position: 0 -32px;
}

/* Plant of the Day */

div#potd {
	padding: 10px;
	margin: 15px 0 15px 0;
	border: 3px solid #fff;
	background: #c7e2a1;
	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
}
#potd > a {
    display: block;
    float: left;
    height: 131px;
    margin: 5px 5px;
    overflow: hidden;
    width: 270px;
}
#potd > a img {
    position: relative;
    top: -60px;
	width: 270px;
}
#potd .details {
    margin: 0 0 0 295px;
    position: absolute;
	width: 630px;
}
#potd h4 span.latin {
    font-style: italic;
}
#potd h4 span.english {
	font-size: 12px;
	color: #807121;	
}
#potd a.learn-more {
    position: absolute;
    top: 102px;
}
#potd .details p {
    height: 79px;
    overflow: hidden;
}

/* Styles for app pages: all levels of Simple Key, etc. */

body.app {
	background: #f0f0c0;
}
.app header {
	height: 120px;
}
.app .content {
	padding: 8px 0 0 0;
	background: url(/static/images/layout/little-plants.jpg) center bottom no-repeat;
}
.app header h1 {
	width: 443px;
	padding: 14px 0 0 0;
	margin: 0 0 0 -15px;	
}
.app header h1 a {
	width: 443px;
	height: 65px;
	background: url(/static/images/layout/logo-app.png) no-repeat transparent;
}

.app header h2 a {
	width: 116px;
	height: 66px;
	background: url(/static/images/layout/newfs-logo-app.png) no-repeat transparent;	
}

.app p.tip {
    color: #519136;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    font-size: 18px;
    margin: 12px 0 0;
    padding: 0;
}

.app nav {
	padding: 0 0 0 48px;
	background: url(/static/images/layout/nav-app-green.png) no-repeat; 	
}
.app footer {
	background: #b4d57f;
}
#main {
	float: right;
	width: 710px;	
}
#sidebar {
	float: left;
	width: 228px;
	padding: 16px 0;
	border-top: 1px solid #c3d941;	
	border-right: 1px solid #c3d941;	
	border-left: 1px solid #c3d941;	
	background: #fff;
}
#sidebar .section {
	padding: 0 16px 16px;	
}
#sidebar .section.separate {
    border-top: 1px solid #e2dfcb;
    padding-top: 16px;
}
/* ... */

